# MusiConnect_pub

./: .gitignore  CMakeLists.txt  CODE_DOCUMENTATION.md  audio_transceiver.cpp  audio_transceiver.py  audio_transceiver_cpp_guide.md  client.cpp  jitterbuffer_Jamulus_KIRO  playout-worklet.js  read.me  receiverthread.h  udpsocket.h
Audio_handling_test_python/: V2_CHANGES.md  audio_receiver.py  audio_receiver_asio.py  audio_receiver_lowlat.py  audio_receiver_v2.py  audio_sender.py  audio_sender_asio.py  audio_sender_lowlat.py  audio_sender_v2.py  list_devices.py  low_latency_backend.py  receiver.py  scarlett_test_code.py  sender.py  socket_parameters.py  tankar_kring_ASIO.md  test_packet_control.py
Herman_server/: README.md  SIGNALING_PYTHON.md  multipeer_test_client.py  signaling_client.cpp  signaling_protocol.h  signaling_server_multipeer.py  signaling_server_python.py
Herman_testar_göra_server/: CMakeLists.txt  PROTOCOL.md  README.md  audio_transceiver_p2p.cpp  demo_client.cpp  signaling_client.h  signaling_server.cpp
Server_client_system_old/: address.h  client  messagequeue.h  server  server.cpp  udpsocket.cpp
WIP_KIRO_tester/: client.html  lowlatency.html  playout-worklet.js
WIP_KIRO_tester/celt/: README.md  build_wasm.sh  capture-worklet.js  celt.html  opus_celt_wrapper.c
Webapp_p2p_test/: ARCHITECTURE.md  SUMMARY.md  client.html  jitterbuffer_jamulus_kiro  lowlatency.html  playout-worklet.js  server.js
asio_app_test/: CMakeLists.txt  README.md
asio_app_test/src/: audio_asio.cpp  audio_asio.h  celt_codec.cpp  celt_codec.h  main.cpp  network.cpp  network.h  ring_buffer.h
asio_app_test/src/src/: audio_asio.h
asio_app_test_mac/: CMakeLists.txt  README.md
asio_app_test_mac/src/: audio_coreaudio.cpp  audio_coreaudio.h  celt_codec.cpp  main.cpp  network.cpp  network.h  ring_buffer.h
jack_voip/: CMakeLists.txt  README.md
jack_voip/src/: audio_jack.cpp  audio_jack.h  celt_codec.cpp  celt_codec.h  main.cpp  ring_buffer.h
musiconnect_5g/: CMakeLists.txt  README.md
musiconnect_5g/src/: audio.h  audio_asio.cpp  audio_asio.h  audio_coreaudio.cpp  audio_coreaudio.h  celt_codec.cpp  celt_codec.h  main.cpp  network.cpp  network.h  ring_buffer.h
musiconnect_gui/: CMakeLists.txt  README.md
musiconnect_gui/src/: audio_engine.cpp  audio_engine.h  main.cpp
musiconnect_macos/: README.md
musiconnect_macos/src/: audio_coreaudio.cpp  audio_coreaudio.h  celt_codec.cpp  celt_codec.h  main.cpp  network.cpp  network.h  ring_buffer.h
viktor/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
viktor/include/: platform_socket.h
viktor/src/: main.cpp  receiver.cpp  sender.cpp
wasapi_voip/: .gitignore  CMakeLists.txt  README.md
wasapi_voip/src/: celt_codec.cpp  celt_codec.h  main.cpp  network.cpp
wasapi_voip_gui/: README.md
wasapi_voip_gui/engine/: CMakeLists.txt
wasapi_voip_gui/engine/src/: audio_wasapi.cpp  audio_wasapi.h  main.cpp  network.h  ring_buffer.h
wasapi_voip_gui/gui/: engine_bridge.py  main.py  setup.bat  setup.ps1  setup.sh
wasapi_voip_gui/gui/assets/: style.qss
wasapi_voip_gui/gui/ui/: __init__.py  connection_panel.py  device_panel.py  main_window.py  stats_panel.py
